// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual Regression Tests > Authentication Components > should render GitHub authentication form consistently > github-auth-form 1`] = `
<div
  class="bg-white rounded-lg shadow-md p-6"
>
  <div
    class="text-center mb-6"
  >
    <svg
      class="mx-auto h-12 w-12 text-gray-400"
      fill="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
      />
    </svg>
    <h2
      class="mt-4 text-xl font-semibold text-gray-900"
    >
      Connect to GitHub
    </h2>
    <p
      class="mt-2 text-sm text-gray-600"
    >
      Enter your GitHub Personal Access Token to get started
    </p>
  </div>
  <form
    class="space-y-4"
  >
    <div>
      <label
        class="block text-sm font-medium text-gray-700 mb-2"
        for="github-token"
      >
        GitHub Personal Access Token
      </label>
      <input
        autocomplete="off"
        class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
        id="github-token"
        placeholder="ghp_xxxxxxxxxxxxxxxxxxxx"
        type="password"
        value=""
      />
      <p
        class="mt-1 text-xs text-gray-500"
      >
        Your token needs 'repo' scope to access repositories and pull requests
      </p>
    </div>
    <button
      class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
      disabled=""
      type="submit"
    >
      Connect to GitHub
    </button>
  </form>
  <div
    class="mt-6 border-t border-gray-200 pt-6"
  >
    <div
      class="text-sm text-gray-600"
    >
      <h3
        class="font-medium mb-2"
      >
        How to create a Personal Access Token:
      </h3>
      <ol
        class="list-decimal list-inside space-y-1 text-xs"
      >
        <li>
          Go to GitHub Settings → Developer settings → Personal access tokens
        </li>
        <li>
          Click "Generate new token (classic)"
        </li>
        <li>
          Select the "repo" scope for full repository access
        </li>
        <li>
          Copy the generated token and paste it above
        </li>
      </ol>
      <p
        class="mt-2 text-xs"
      >
        <a
          class="text-blue-600 hover:text-blue-800 underline"
          href="https://github.com/settings/tokens"
          rel="noopener noreferrer"
          target="_blank"
        >
          Create token on GitHub →
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Authentication Components > should render authentication form with error state > github-auth-form-error 1`] = `
<div
  class="bg-white rounded-lg shadow-md p-6"
>
  <div
    class="text-center mb-6"
  >
    <svg
      class="mx-auto h-12 w-12 text-gray-400"
      fill="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
      />
    </svg>
    <h2
      class="mt-4 text-xl font-semibold text-gray-900"
    >
      Connect to GitHub
    </h2>
    <p
      class="mt-2 text-sm text-gray-600"
    >
      Enter your GitHub Personal Access Token to get started
    </p>
  </div>
  <form
    class="space-y-4"
  >
    <div>
      <label
        class="block text-sm font-medium text-gray-700 mb-2"
        for="github-token"
      >
        GitHub Personal Access Token
      </label>
      <input
        aria-invalid="true"
        autocomplete="off"
        class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
        id="github-token"
        placeholder="ghp_xxxxxxxxxxxxxxxxxxxx"
        type="password"
        value=""
      />
      <p
        class="mt-1 text-xs text-gray-500"
      >
        Your token needs 'repo' scope to access repositories and pull requests
      </p>
    </div>
    <button
      class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
      disabled=""
      type="submit"
    >
      Connect to GitHub
    </button>
  </form>
  <div
    class="mt-6 border-t border-gray-200 pt-6"
  >
    <div
      class="text-sm text-gray-600"
    >
      <h3
        class="font-medium mb-2"
      >
        How to create a Personal Access Token:
      </h3>
      <ol
        class="list-decimal list-inside space-y-1 text-xs"
      >
        <li>
          Go to GitHub Settings → Developer settings → Personal access tokens
        </li>
        <li>
          Click "Generate new token (classic)"
        </li>
        <li>
          Select the "repo" scope for full repository access
        </li>
        <li>
          Copy the generated token and paste it above
        </li>
      </ol>
      <p
        class="mt-2 text-xs"
      >
        <a
          class="text-blue-600 hover:text-blue-800 underline"
          href="https://github.com/settings/tokens"
          rel="noopener noreferrer"
          target="_blank"
        >
          Create token on GitHub →
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Comment Sidebar > should render comment sidebar with editing state > comment-sidebar-editing 1`] = `
<div
  class="bg-white rounded-lg shadow-md"
>
  <div
    class="px-6 py-4 border-b border-gray-200"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-lg font-medium text-gray-900"
      >
        Review Comments (
        3
        )
      </h3>
    </div>
    <div
      class="grid grid-cols-3 gap-4 mb-4"
    >
      <div
        class="text-center"
      >
        <div
          class="text-2xl font-bold text-gray-900"
        >
          2
        </div>
        <div
          class="text-xs text-gray-500"
        >
          Pending
        </div>
      </div>
      <div
        class="text-center"
      >
        <div
          class="text-2xl font-bold text-green-600"
        >
          1
        </div>
        <div
          class="text-xs text-gray-500"
        >
          Accepted
        </div>
      </div>
      <div
        class="text-center"
      >
        <div
          class="text-2xl font-bold text-red-600"
        >
          0
        </div>
        <div
          class="text-xs text-gray-500"
        >
          Rejected
        </div>
      </div>
    </div>
    <div
      class="flex justify-center space-x-4 mb-4 text-xs"
    >
      <span
        class="flex items-center"
      >
        <div
          class="w-2 h-2 bg-red-500 rounded-full mr-1"
        />
        1
         Errors
      </span>
      <span
        class="flex items-center"
      >
        <div
          class="w-2 h-2 bg-yellow-500 rounded-full mr-1"
        />
        1
         Warnings
      </span>
      <span
        class="flex items-center"
      >
        <div
          class="w-2 h-2 bg-blue-500 rounded-full mr-1"
        />
        1
         Info
      </span>
    </div>
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-2 sm:space-y-0 sm:space-x-4"
    >
      <div
        class="flex items-center space-x-2"
      >
        <label
          class="text-sm font-medium text-gray-700"
          for="status-filter"
        >
          Status:
        </label>
        <select
          class="text-sm border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500"
          id="status-filter"
        >
          <option
            value="all"
          >
            All
          </option>
          <option
            value="pending"
          >
            Pending
          </option>
          <option
            value="accepted"
          >
            Accepted
          </option>
          <option
            value="rejected"
          >
            Rejected
          </option>
        </select>
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <label
          class="text-sm font-medium text-gray-700"
          for="sort-by"
        >
          Sort by:
        </label>
        <select
          class="text-sm border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500"
          id="sort-by"
        >
          <option
            value="file"
          >
            File & Line
          </option>
          <option
            value="severity"
          >
            Severity
          </option>
          <option
            value="line"
          >
            Line Number
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="p-6"
  >
    <div
      class="space-y-0 max-h-96 overflow-y-auto"
    >
      <div
        class="border rounded-lg p-4 mb-3 cursor-pointer transition-all duration-200 hover:shadow-md text-red-600 bg-red-50 border-red-200 "
      >
        <div
          class="flex items-start justify-between mb-2"
        >
          <div
            class="flex items-center space-x-2 min-w-0 flex-1"
          >
            <svg
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="text-sm font-medium truncate"
              >
                src/auth/login.js
              </p>
              <p
                class="text-xs opacity-75"
              >
                Line 
                15
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-2 ml-2"
          >
            <span
              class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
                  fill-rule="evenodd"
                />
              </svg>
              Pending
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <div>
            <p
              class="text-sm whitespace-pre-wrap"
            >
              Consider using bcrypt for password hashing instead of plain text storage. This is a critical security vulnerability.
            </p>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 border-t border-current border-opacity-20"
        >
          <div
            class="flex space-x-2"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-green-700 bg-green-100 border border-green-300 rounded-md hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
              Accept
            </button>
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-blue-700 bg-blue-100 border border-blue-300 rounded-md hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
                />
              </svg>
              Edit
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-red-700 bg-red-100 border border-red-300 rounded-md hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414L8.586 12l-1.293 1.293a1 1 0 101.414 1.414L10 13.414l1.293 1.293a1 1 0 001.414-1.414L11.414 12l1.293-1.293z"
                  fill-rule="evenodd"
                />
              </svg>
              Delete
            </button>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 mt-2 border-t border-current border-opacity-10"
        >
          <div
            class="flex items-center space-x-2 text-xs opacity-75"
          />
          <span
            class="text-xs opacity-75"
          >
            Invalid Date
          </span>
        </div>
      </div>
      <div
        class="border rounded-lg p-4 mb-3 cursor-pointer transition-all duration-200 hover:shadow-md text-blue-600 bg-blue-50 border-blue-200 "
      >
        <div
          class="flex items-start justify-between mb-2"
        >
          <div
            class="flex items-center space-x-2 min-w-0 flex-1"
          >
            <svg
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="text-sm font-medium truncate"
              >
                src/components/LoginForm.jsx
              </p>
              <p
                class="text-xs opacity-75"
              >
                Line 
                42
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-2 ml-2"
          >
            <span
              class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
                  fill-rule="evenodd"
                />
              </svg>
              Pending
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <div>
            <p
              class="text-sm whitespace-pre-wrap"
            >
              Consider adding loading state to improve user experience during authentication.
            </p>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 border-t border-current border-opacity-20"
        >
          <div
            class="flex space-x-2"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-green-700 bg-green-100 border border-green-300 rounded-md hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
              Accept
            </button>
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-blue-700 bg-blue-100 border border-blue-300 rounded-md hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
                />
              </svg>
              Edit
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-red-700 bg-red-100 border border-red-300 rounded-md hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414L8.586 12l-1.293 1.293a1 1 0 101.414 1.414L10 13.414l1.293 1.293a1 1 0 001.414-1.414L11.414 12l1.293-1.293z"
                  fill-rule="evenodd"
                />
              </svg>
              Delete
            </button>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 mt-2 border-t border-current border-opacity-10"
        >
          <div
            class="flex items-center space-x-2 text-xs opacity-75"
          />
          <span
            class="text-xs opacity-75"
          >
            Invalid Date
          </span>
        </div>
      </div>
      <div
        class="border rounded-lg p-4 mb-3 cursor-pointer transition-all duration-200 hover:shadow-md text-yellow-600 bg-yellow-50 border-yellow-200 opacity-75"
      >
        <div
          class="flex items-start justify-between mb-2"
        >
          <div
            class="flex items-center space-x-2 min-w-0 flex-1"
          >
            <svg
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="text-sm font-medium truncate"
              >
                src/utils/validation.js
              </p>
              <p
                class="text-xs opacity-75"
              >
                Line 
                8
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-2 ml-2"
          >
            <span
              class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
              Accepted
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <div>
            <p
              class="text-sm whitespace-pre-wrap"
            >
              The email validation regex could be improved to handle edge cases better.
            </p>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 mt-2 border-t border-current border-opacity-10"
        >
          <div
            class="flex items-center space-x-2 text-xs opacity-75"
          />
          <span
            class="text-xs opacity-75"
          >
            Invalid Date
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Comment Sidebar > should render comment sidebar with multiple comment types > comment-sidebar 1`] = `
<div
  class="bg-white rounded-lg shadow-md"
>
  <div
    class="px-6 py-4 border-b border-gray-200"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-lg font-medium text-gray-900"
      >
        Review Comments (
        3
        )
      </h3>
    </div>
    <div
      class="grid grid-cols-3 gap-4 mb-4"
    >
      <div
        class="text-center"
      >
        <div
          class="text-2xl font-bold text-gray-900"
        >
          2
        </div>
        <div
          class="text-xs text-gray-500"
        >
          Pending
        </div>
      </div>
      <div
        class="text-center"
      >
        <div
          class="text-2xl font-bold text-green-600"
        >
          1
        </div>
        <div
          class="text-xs text-gray-500"
        >
          Accepted
        </div>
      </div>
      <div
        class="text-center"
      >
        <div
          class="text-2xl font-bold text-red-600"
        >
          0
        </div>
        <div
          class="text-xs text-gray-500"
        >
          Rejected
        </div>
      </div>
    </div>
    <div
      class="flex justify-center space-x-4 mb-4 text-xs"
    >
      <span
        class="flex items-center"
      >
        <div
          class="w-2 h-2 bg-red-500 rounded-full mr-1"
        />
        1
         Errors
      </span>
      <span
        class="flex items-center"
      >
        <div
          class="w-2 h-2 bg-yellow-500 rounded-full mr-1"
        />
        1
         Warnings
      </span>
      <span
        class="flex items-center"
      >
        <div
          class="w-2 h-2 bg-blue-500 rounded-full mr-1"
        />
        1
         Info
      </span>
    </div>
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-2 sm:space-y-0 sm:space-x-4"
    >
      <div
        class="flex items-center space-x-2"
      >
        <label
          class="text-sm font-medium text-gray-700"
          for="status-filter"
        >
          Status:
        </label>
        <select
          class="text-sm border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500"
          id="status-filter"
        >
          <option
            value="all"
          >
            All
          </option>
          <option
            value="pending"
          >
            Pending
          </option>
          <option
            value="accepted"
          >
            Accepted
          </option>
          <option
            value="rejected"
          >
            Rejected
          </option>
        </select>
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <label
          class="text-sm font-medium text-gray-700"
          for="sort-by"
        >
          Sort by:
        </label>
        <select
          class="text-sm border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500"
          id="sort-by"
        >
          <option
            value="file"
          >
            File & Line
          </option>
          <option
            value="severity"
          >
            Severity
          </option>
          <option
            value="line"
          >
            Line Number
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="p-6"
  >
    <div
      class="space-y-0 max-h-96 overflow-y-auto"
    >
      <div
        class="border rounded-lg p-4 mb-3 cursor-pointer transition-all duration-200 hover:shadow-md text-red-600 bg-red-50 border-red-200 "
      >
        <div
          class="flex items-start justify-between mb-2"
        >
          <div
            class="flex items-center space-x-2 min-w-0 flex-1"
          >
            <svg
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="text-sm font-medium truncate"
              >
                src/auth/login.js
              </p>
              <p
                class="text-xs opacity-75"
              >
                Line 
                15
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-2 ml-2"
          >
            <span
              class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
                  fill-rule="evenodd"
                />
              </svg>
              Pending
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <div>
            <p
              class="text-sm whitespace-pre-wrap"
            >
              Consider using bcrypt for password hashing instead of plain text storage. This is a critical security vulnerability.
            </p>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 border-t border-current border-opacity-20"
        >
          <div
            class="flex space-x-2"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-green-700 bg-green-100 border border-green-300 rounded-md hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
              Accept
            </button>
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-blue-700 bg-blue-100 border border-blue-300 rounded-md hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
                />
              </svg>
              Edit
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-red-700 bg-red-100 border border-red-300 rounded-md hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414L8.586 12l-1.293 1.293a1 1 0 101.414 1.414L10 13.414l1.293 1.293a1 1 0 001.414-1.414L11.414 12l1.293-1.293z"
                  fill-rule="evenodd"
                />
              </svg>
              Delete
            </button>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 mt-2 border-t border-current border-opacity-10"
        >
          <div
            class="flex items-center space-x-2 text-xs opacity-75"
          />
          <span
            class="text-xs opacity-75"
          >
            Invalid Date
          </span>
        </div>
      </div>
      <div
        class="border rounded-lg p-4 mb-3 cursor-pointer transition-all duration-200 hover:shadow-md text-blue-600 bg-blue-50 border-blue-200 "
      >
        <div
          class="flex items-start justify-between mb-2"
        >
          <div
            class="flex items-center space-x-2 min-w-0 flex-1"
          >
            <svg
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="text-sm font-medium truncate"
              >
                src/components/LoginForm.jsx
              </p>
              <p
                class="text-xs opacity-75"
              >
                Line 
                42
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-2 ml-2"
          >
            <span
              class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
                  fill-rule="evenodd"
                />
              </svg>
              Pending
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <div>
            <p
              class="text-sm whitespace-pre-wrap"
            >
              Consider adding loading state to improve user experience during authentication.
            </p>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 border-t border-current border-opacity-20"
        >
          <div
            class="flex space-x-2"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-green-700 bg-green-100 border border-green-300 rounded-md hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
              Accept
            </button>
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-blue-700 bg-blue-100 border border-blue-300 rounded-md hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
                />
              </svg>
              Edit
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-red-700 bg-red-100 border border-red-300 rounded-md hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414L8.586 12l-1.293 1.293a1 1 0 101.414 1.414L10 13.414l1.293 1.293a1 1 0 001.414-1.414L11.414 12l1.293-1.293z"
                  fill-rule="evenodd"
                />
              </svg>
              Delete
            </button>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 mt-2 border-t border-current border-opacity-10"
        >
          <div
            class="flex items-center space-x-2 text-xs opacity-75"
          />
          <span
            class="text-xs opacity-75"
          >
            Invalid Date
          </span>
        </div>
      </div>
      <div
        class="border rounded-lg p-4 mb-3 cursor-pointer transition-all duration-200 hover:shadow-md text-yellow-600 bg-yellow-50 border-yellow-200 opacity-75"
      >
        <div
          class="flex items-start justify-between mb-2"
        >
          <div
            class="flex items-center space-x-2 min-w-0 flex-1"
          >
            <svg
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="text-sm font-medium truncate"
              >
                src/utils/validation.js
              </p>
              <p
                class="text-xs opacity-75"
              >
                Line 
                8
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-2 ml-2"
          >
            <span
              class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
              Accepted
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <div>
            <p
              class="text-sm whitespace-pre-wrap"
            >
              The email validation regex could be improved to handle edge cases better.
            </p>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 mt-2 border-t border-current border-opacity-10"
        >
          <div
            class="flex items-center space-x-2 text-xs opacity-75"
          />
          <span
            class="text-xs opacity-75"
          >
            Invalid Date
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Comment Sidebar > should render empty comment sidebar > comment-sidebar-empty 1`] = `
<div
  class="bg-white rounded-lg shadow-md p-6"
>
  <h3
    class="text-lg font-medium text-gray-900 mb-4"
  >
    Review Comments
  </h3>
  <div
    class="text-center py-8"
  >
    <svg
      class="mx-auto h-12 w-12 text-gray-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <h4
      class="mt-2 text-sm font-medium text-gray-900"
    >
      No comments yet
    </h4>
    <p
      class="mt-1 text-sm text-gray-500"
    >
      Run a code review to see AI-generated comments here
    </p>
  </div>
</div>
`;

exports[`Visual Regression Tests > Dark Mode Support > should render components in dark mode > github-auth-dark-mode 1`] = `
<div
  class="dark"
>
  <div
    class="bg-white rounded-lg shadow-md p-6"
  >
    <div
      class="text-center mb-6"
    >
      <svg
        class="mx-auto h-12 w-12 text-gray-400"
        fill="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
        />
      </svg>
      <h2
        class="mt-4 text-xl font-semibold text-gray-900"
      >
        Connect to GitHub
      </h2>
      <p
        class="mt-2 text-sm text-gray-600"
      >
        Enter your GitHub Personal Access Token to get started
      </p>
    </div>
    <form
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-2"
          for="github-token"
        >
          GitHub Personal Access Token
        </label>
        <input
          autocomplete="off"
          class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
          id="github-token"
          placeholder="ghp_xxxxxxxxxxxxxxxxxxxx"
          type="password"
          value=""
        />
        <p
          class="mt-1 text-xs text-gray-500"
        >
          Your token needs 'repo' scope to access repositories and pull requests
        </p>
      </div>
      <button
        class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
        disabled=""
        type="submit"
      >
        Connect to GitHub
      </button>
    </form>
    <div
      class="mt-6 border-t border-gray-200 pt-6"
    >
      <div
        class="text-sm text-gray-600"
      >
        <h3
          class="font-medium mb-2"
        >
          How to create a Personal Access Token:
        </h3>
        <ol
          class="list-decimal list-inside space-y-1 text-xs"
        >
          <li>
            Go to GitHub Settings → Developer settings → Personal access tokens
          </li>
          <li>
            Click "Generate new token (classic)"
          </li>
          <li>
            Select the "repo" scope for full repository access
          </li>
          <li>
            Copy the generated token and paste it above
          </li>
        </ol>
        <p
          class="mt-2 text-xs"
        >
          <a
            class="text-blue-600 hover:text-blue-800 underline"
            href="https://github.com/settings/tokens"
            rel="noopener noreferrer"
            target="_blank"
          >
            Create token on GitHub →
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Repository Selection > should render empty repository state > repository-selector-empty 1`] = `
<div
  class="bg-yellow-50 border border-yellow-200 rounded-lg p-6"
>
  <div
    class="text-center"
  >
    <svg
      class="mx-auto h-12 w-12 text-yellow-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L4.082 15.5c-.77.833.192 2.5 1.732 2.5z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <h3
      class="mt-2 text-sm font-medium text-yellow-800"
    >
      Authentication Required
    </h3>
    <p
      class="mt-1 text-sm text-yellow-600"
    >
      Please authenticate with GitHub to view your repositories.
    </p>
  </div>
</div>
`;

exports[`Visual Regression Tests > Repository Selection > should render repository list consistently > repository-selector 1`] = `
<div
  class="bg-yellow-50 border border-yellow-200 rounded-lg p-6"
>
  <div
    class="text-center"
  >
    <svg
      class="mx-auto h-12 w-12 text-yellow-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L4.082 15.5c-.77.833.192 2.5 1.732 2.5z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <h3
      class="mt-2 text-sm font-medium text-yellow-800"
    >
      Authentication Required
    </h3>
    <p
      class="mt-1 text-sm text-yellow-600"
    >
      Please authenticate with GitHub to view your repositories.
    </p>
  </div>
</div>
`;

exports[`Visual Regression Tests > Repository Selection > should render repository list loading state > repository-selector-loading 1`] = `
<div
  class="bg-yellow-50 border border-yellow-200 rounded-lg p-6"
>
  <div
    class="text-center"
  >
    <svg
      class="mx-auto h-12 w-12 text-yellow-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L4.082 15.5c-.77.833.192 2.5 1.732 2.5z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <h3
      class="mt-2 text-sm font-medium text-yellow-800"
    >
      Authentication Required
    </h3>
    <p
      class="mt-1 text-sm text-yellow-600"
    >
      Please authenticate with GitHub to view your repositories.
    </p>
  </div>
</div>
`;

exports[`Visual Regression Tests > Responsive Layouts > should render mobile layout correctly > repository-selector-mobile 1`] = `
<div
  class="bg-yellow-50 border border-yellow-200 rounded-lg p-6"
>
  <div
    class="text-center"
  >
    <svg
      class="mx-auto h-12 w-12 text-yellow-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L4.082 15.5c-.77.833.192 2.5 1.732 2.5z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <h3
      class="mt-2 text-sm font-medium text-yellow-800"
    >
      Authentication Required
    </h3>
    <p
      class="mt-1 text-sm text-yellow-600"
    >
      Please authenticate with GitHub to view your repositories.
    </p>
  </div>
</div>
`;

exports[`Visual Regression Tests > Responsive Layouts > should render tablet layout correctly > comment-sidebar-tablet 1`] = `
<div
  class="bg-white rounded-lg shadow-md"
>
  <div
    class="px-6 py-4 border-b border-gray-200"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-lg font-medium text-gray-900"
      >
        Review Comments (
        3
        )
      </h3>
    </div>
    <div
      class="grid grid-cols-3 gap-4 mb-4"
    >
      <div
        class="text-center"
      >
        <div
          class="text-2xl font-bold text-gray-900"
        >
          2
        </div>
        <div
          class="text-xs text-gray-500"
        >
          Pending
        </div>
      </div>
      <div
        class="text-center"
      >
        <div
          class="text-2xl font-bold text-green-600"
        >
          1
        </div>
        <div
          class="text-xs text-gray-500"
        >
          Accepted
        </div>
      </div>
      <div
        class="text-center"
      >
        <div
          class="text-2xl font-bold text-red-600"
        >
          0
        </div>
        <div
          class="text-xs text-gray-500"
        >
          Rejected
        </div>
      </div>
    </div>
    <div
      class="flex justify-center space-x-4 mb-4 text-xs"
    >
      <span
        class="flex items-center"
      >
        <div
          class="w-2 h-2 bg-red-500 rounded-full mr-1"
        />
        1
         Errors
      </span>
      <span
        class="flex items-center"
      >
        <div
          class="w-2 h-2 bg-yellow-500 rounded-full mr-1"
        />
        1
         Warnings
      </span>
      <span
        class="flex items-center"
      >
        <div
          class="w-2 h-2 bg-blue-500 rounded-full mr-1"
        />
        1
         Info
      </span>
    </div>
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-2 sm:space-y-0 sm:space-x-4"
    >
      <div
        class="flex items-center space-x-2"
      >
        <label
          class="text-sm font-medium text-gray-700"
          for="status-filter"
        >
          Status:
        </label>
        <select
          class="text-sm border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500"
          id="status-filter"
        >
          <option
            value="all"
          >
            All
          </option>
          <option
            value="pending"
          >
            Pending
          </option>
          <option
            value="accepted"
          >
            Accepted
          </option>
          <option
            value="rejected"
          >
            Rejected
          </option>
        </select>
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <label
          class="text-sm font-medium text-gray-700"
          for="sort-by"
        >
          Sort by:
        </label>
        <select
          class="text-sm border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500"
          id="sort-by"
        >
          <option
            value="file"
          >
            File & Line
          </option>
          <option
            value="severity"
          >
            Severity
          </option>
          <option
            value="line"
          >
            Line Number
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="p-6"
  >
    <div
      class="space-y-0 max-h-96 overflow-y-auto"
    >
      <div
        class="border rounded-lg p-4 mb-3 cursor-pointer transition-all duration-200 hover:shadow-md text-red-600 bg-red-50 border-red-200 "
      >
        <div
          class="flex items-start justify-between mb-2"
        >
          <div
            class="flex items-center space-x-2 min-w-0 flex-1"
          >
            <svg
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="text-sm font-medium truncate"
              >
                src/auth/login.js
              </p>
              <p
                class="text-xs opacity-75"
              >
                Line 
                15
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-2 ml-2"
          >
            <span
              class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
                  fill-rule="evenodd"
                />
              </svg>
              Pending
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <div>
            <p
              class="text-sm whitespace-pre-wrap"
            >
              Consider using bcrypt for password hashing instead of plain text storage. This is a critical security vulnerability.
            </p>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 border-t border-current border-opacity-20"
        >
          <div
            class="flex space-x-2"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-green-700 bg-green-100 border border-green-300 rounded-md hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
              Accept
            </button>
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-blue-700 bg-blue-100 border border-blue-300 rounded-md hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
                />
              </svg>
              Edit
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-red-700 bg-red-100 border border-red-300 rounded-md hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414L8.586 12l-1.293 1.293a1 1 0 101.414 1.414L10 13.414l1.293 1.293a1 1 0 001.414-1.414L11.414 12l1.293-1.293z"
                  fill-rule="evenodd"
                />
              </svg>
              Delete
            </button>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 mt-2 border-t border-current border-opacity-10"
        >
          <div
            class="flex items-center space-x-2 text-xs opacity-75"
          />
          <span
            class="text-xs opacity-75"
          >
            Invalid Date
          </span>
        </div>
      </div>
      <div
        class="border rounded-lg p-4 mb-3 cursor-pointer transition-all duration-200 hover:shadow-md text-blue-600 bg-blue-50 border-blue-200 "
      >
        <div
          class="flex items-start justify-between mb-2"
        >
          <div
            class="flex items-center space-x-2 min-w-0 flex-1"
          >
            <svg
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="text-sm font-medium truncate"
              >
                src/components/LoginForm.jsx
              </p>
              <p
                class="text-xs opacity-75"
              >
                Line 
                42
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-2 ml-2"
          >
            <span
              class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
                  fill-rule="evenodd"
                />
              </svg>
              Pending
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <div>
            <p
              class="text-sm whitespace-pre-wrap"
            >
              Consider adding loading state to improve user experience during authentication.
            </p>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 border-t border-current border-opacity-20"
        >
          <div
            class="flex space-x-2"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-green-700 bg-green-100 border border-green-300 rounded-md hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
              Accept
            </button>
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-blue-700 bg-blue-100 border border-blue-300 rounded-md hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
                />
              </svg>
              Edit
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="inline-flex items-center px-2 py-1 text-xs font-medium text-red-700 bg-red-100 border border-red-300 rounded-md hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414L8.586 12l-1.293 1.293a1 1 0 101.414 1.414L10 13.414l1.293 1.293a1 1 0 001.414-1.414L11.414 12l1.293-1.293z"
                  fill-rule="evenodd"
                />
              </svg>
              Delete
            </button>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 mt-2 border-t border-current border-opacity-10"
        >
          <div
            class="flex items-center space-x-2 text-xs opacity-75"
          />
          <span
            class="text-xs opacity-75"
          >
            Invalid Date
          </span>
        </div>
      </div>
      <div
        class="border rounded-lg p-4 mb-3 cursor-pointer transition-all duration-200 hover:shadow-md text-yellow-600 bg-yellow-50 border-yellow-200 opacity-75"
      >
        <div
          class="flex items-start justify-between mb-2"
        >
          <div
            class="flex items-center space-x-2 min-w-0 flex-1"
          >
            <svg
              class="h-4 w-4"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="text-sm font-medium truncate"
              >
                src/utils/validation.js
              </p>
              <p
                class="text-xs opacity-75"
              >
                Line 
                8
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-2 ml-2"
          >
            <span
              class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800"
            >
              <svg
                class="w-3 h-3 mr-1"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
              Accepted
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <div>
            <p
              class="text-sm whitespace-pre-wrap"
            >
              The email validation regex could be improved to handle edge cases better.
            </p>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2 mt-2 border-t border-current border-opacity-10"
        >
          <div
            class="flex items-center space-x-2 text-xs opacity-75"
          />
          <span
            class="text-xs opacity-75"
          >
            Invalid Date
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Template Editor > should render template editor consistently > template-editor 1`] = `
<div
  class="max-w-6xl mx-auto bg-white rounded-lg shadow-lg"
>
  <div
    class="border-b border-gray-200 px-6 py-4"
  >
    <div
      class="flex items-center justify-between"
    >
      <h2
        class="text-xl font-semibold text-gray-900"
      >
        Create New Template
      </h2>
      <div
        class="flex items-center space-x-2"
      >
        <button
          class="px-3 py-1 text-sm rounded-md bg-gray-100 text-gray-700 hover:bg-gray-200"
        >
          Preview
        </button>
      </div>
    </div>
  </div>
  <div
    class="p-6"
  >
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6"
    >
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-2"
          for="template-name"
        >
          Template Name *
        </label>
        <input
          class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 border-gray-300"
          id="template-name"
          placeholder="Enter template name"
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-2"
          for="template-description"
        >
          Description *
        </label>
        <input
          class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 border-gray-300"
          id="template-description"
          placeholder="Brief description of the template"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="mb-6"
    >
      <div
        class="flex items-center justify-between mb-2"
      >
        <label
          class="block text-sm font-medium text-gray-700"
          for="template-content"
        >
          Template Content *
        </label>
        <button
          class="text-sm text-blue-600 hover:text-blue-800"
        >
          Generate from fields
        </button>
      </div>
      <textarea
        class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 font-mono text-sm min-h-96 max-h-96 resize-none border-gray-300"
        id="template-content"
        placeholder="Enter template content in markdown format..."
      />
      <p
        class="mt-1 text-sm text-gray-500"
      >
        Use markdown format. The content will be parsed to extract prompts, rules, and criteria.
      </p>
    </div>
    <div
      class="flex items-center justify-end space-x-3 pt-4 border-t border-gray-200"
    >
      <button
        class="px-4 py-2 text-sm font-medium text-gray-700 bg-gray-100 rounded-md hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-500"
      >
        Cancel
      </button>
      <button
        class="px-4 py-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
      >
        Save Template
      </button>
    </div>
  </div>
</div>
`;
